# SkyFlow

./: README.md  basic-env.sh  install-envoy.sh  trans-optimization.sh
client-plugin/: config.yaml  go.mod  go.sum  main.go
client-plugin/api/: chunk-server.go  large-file.go  upload-handler.go
client-plugin/config/: config.go
client-plugin/limit-rate/: limit-rate.go
client-plugin/upload/: client.go  proxy.go  upload.go
client-plugin/upload/base/: base.go  disk.go  gcs.go  s3.go  upload.go
client-plugin/upload/gcs/: compose.go  download.go  get-size.go  upload.go
client-plugin/upload/gcs-client/: upload-client.go
client-plugin/upload/local/: download.go  get-size.go
client-plugin/upload/remote/: compose.go  download.go  get-size.go  upload.go
client-plugin/upload/remote-client/: upload-client.go
client-plugin/upload/s3/: compose.go  download.go  get-size.go  upload.go
client-plugin/upload/s3-client/: upload-client.go
client-plugin/upload/split/: split.go
client-plugin/util/: common.go  safe-map.go  util.go
data-plane/: go.mod  go.sum  main.go
data-plane/probing/: get-task.go  tcpprobe.go
data-plane/telemetry/: reporter.go
data-plane/util/: config.go  util.go
data-proxy/: config.yaml  main.go
data-proxy-rust/: Cargo.toml  config.toml
data-proxy-rust/src/: client-pool.rs  config.rs  congestion.rs  health.rs  logger.rs  main.rs  proxy-handler.rs  utils.rs
data-proxy/health/: health.go
data-proxy/queue/: queue.go
data-proxy/util/: config.go
envoy-lua/: install-forwarding.sh  install-gateway.sh
(+13 files in other folders)
