[package]
name = "data-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.6", features = ["macros", "headers"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
serde = { version = "1.0", features = ["derive", "json"] } # Keep only this line!
serde_json = "1.0"
bytes = "1.0"
rand = "0.8"
sysinfo = "0.29"
thiserror = "1.0"
once_cell = "1.18"
futures-util = "0.3.32"
libc = "0.2"

# Configuration
config = "0.14" # This can be added
